--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
     </style>
   </head>
   <body class='main_index'>
-    <img src='/images/'/>
+    <img src='/images/bayareacomputerclub_og.jpg'/>
   </body>
 </html>
